Version 3.6.4
- In P2 mode, handle hub symbols more like PNut (so usually use byte
  address rather than long address).
- Fixed compilation of getnib, getbyte instructions in P2
- Added check for correct number of operands for instructions found in
  inline assembly
  
Version 3.6.3
- In --asm --binary mode, delete the final output binary name if
  compilation to assembly fails.
- Fixed a bug in handling C++ methods forced to be static due to
  their use in cognew
- Fixed another optimizer bug (forward propagation of constants was
  crossing call boundaries, which caused problems with things changed
  by the call)
- Fixed immediates on destinations in P2 (like rdfast #0, foo)
- Implemented 3 operand P2 instructions like getbyte, setnib, and
  fixed a few other missing P2 instructions

Version 3.6.2
- fastspin can now compile to binary for P2
- Fixed an optimizer bug where it tried to change INA from a src in
  one instruction to a dest in another (INA as dest points to RAM
  rather than register)
- Fixed preprocessor handling of quoted characters
- Partially updated P2 instructions to v18

Version 3.6.1
- fixed a bogus error about function symbols used as array
  dereferences
- fixed type casting of function return values used in expressions

Version 3.6.0

- added Spin2 style object declarations and casts
- PASM output did not handle arrays of objects correctly, now it does
- fixed a preprocessor bug with #ifdef

Version 3.5.1

- Fixed incorrect output of float expressions in --gas mode.
- Fixed a problem with the name of the ..dat_start in --gas mode if the
  base file name contains spaces
- Added a C / C++ options dialog to spinconvert
- Updated copyright notices.

Version 3.5.0

- Added type inference so that C/C++ code has types that are more
  like what a human programmer would add.
- Fixed a problem with assignments inside other operators (evaluation
  was not in the same order as traditional Spin)
  
Version 3.4.1
